--- a/.gitignore
+++ b/.gitignore
@@ -29,4 +29,4 @@ yarn-error.log*
 
 .idea
 
-!./packages/buidler/node_modules/@openzepelin/contracts/token/erc721.ol
+!/packages/buidler/node_modules/@openzepelin/contracts/token/erc721.ol
