--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@ packages/buidler/*.txt
 **/aws.json
 
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+!**/node_modules/@openzepelin/contracts/token/erc721.ol
+
 **/node_modules
 packages/buidler/artifacts
 packages/react-app/src/contracts
@@ -29,4 +31,3 @@ yarn-error.log*
 
 .idea
 
-!/packages/buidler/node_modules/@openzepelin/contracts/token/erc721.ol
