--- a/packages/buidler/package.json
+++ b/packages/buidler/package.json
@@ -25,6 +25,7 @@
     "chain": "buidler node",
     "test": "buidler test --network buidlerevm",
     "compile": "buidler compile",
+    "lottery": "buidler run scripts/deploy_lottery.js && buidler run scripts/publish.js",
     "deploy": "buidler run scripts/deploy.js && buidler run scripts/publish.js",
     "watch": "node scripts/watch.js",
     "accounts": "buidler accounts",
