--- a/packages/buidler/package.json
+++ b/packages/buidler/package.json
@@ -26,7 +26,7 @@
     "chain": "buidler node",
     "test": "buidler test --network buidlerevm",
     "compile": "buidler compile",
-    "lottery": "buidler run scripts/deploy_lottery.js && buidler run scripts/publish.js",
+    "lp": "buidler run scripts/deploy_vnftLp.js && buidler run scripts/publish.js",
     "deploy": "buidler run scripts/deploy.js && buidler run scripts/publish.js",
     "watch": "node scripts/watch.js",
     "accounts": "buidler accounts",
